<?xml version="1.0" encoding="UTF-8"?>
<!--
   CODENVY CONFIDENTIAL
   __________________

   [2012] - [2013] Codenvy, S.A.
   All Rights Reserved.

   NOTICE:  All information contained herein is, and remains
   the property of Codenvy S.A. and its suppliers,
   if any.  The intellectual and technical concepts contained
   herein are proprietary to Codenvy S.A.
   and its suppliers and may be covered by U.S. and Foreign Patents,
   patents in process, and are protected by trade secret or copyright law.
   Dissemination of this information or reproduction of this material
   is strictly forbidden unless prior written permission is obtained
   from Codenvy S.A..
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.codenvy.ide</groupId>
    <artifactId>codenvy-ide-client</artifactId>
    <version>3.0.0-M3-SNAPSHOT</version>
    <packaging>war</packaging>
    <name>Codenvy :: Client</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <generated.sources.directory>${project.build.directory}/generated-sources/gen</generated.sources.directory>

        <!-- eXo -->
        <org.exoplatform.ide.version>2.8.1</org.exoplatform.ide.version>

        <!-- GWT -->
        <gwt.version>2.5.1</gwt.version>
        <gwt.maven.plugin.version>2.5.1</gwt.maven.plugin.version>

        <!-- Testing libraries -->
        <junit.version>4.7</junit.version>
        <mockito.version>1.9.5</mockito.version>
        <gwt-test-utils.version>0.45</gwt-test-utils.version>

        <!-- Logging libraries -->
        <org.slf4j.version>1.6.2</org.slf4j.version>

        <!-- Third parties -->
        <commons-io.version>2.4</commons-io.version>
        <gin.version>2.1.1</gin.version>
        <jgit.version>2.3.1.201302201838-r</jgit.version>
        <reflections.version>0.9.9-RC1</reflections.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-servlet</artifactId>
            <scope>runtime</scope>
            <version>${gwt.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <scope>provided</scope>
            <version>${gwt.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.gwt.inject</groupId>
            <artifactId>gin</artifactId>
            <version>${gin.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
            <version>${junit.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
            <version>${mockito.version}</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.gwt-test-utils</groupId>
            <artifactId>gwt-test-utils</artifactId>
            <scope>test</scope>
            <version>${gwt-test-utils.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${org.slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${org.slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ide-core</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>org.exoplatform.ide</groupId>
            <artifactId>exo-ide-vfs-fs</artifactId>
            <scope>runtime</scope>
            <version>${org.exoplatform.ide.version}</version>
        </dependency>
        <dependency>
            <groupId>org.exoplatform.ide</groupId>
            <artifactId>exo-ide-websocket</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>ch.qos.logback</groupId>
                    <artifactId>logback-classic</artifactId>
                </exclusion>
            </exclusions>
            <version>${org.exoplatform.ide.version}</version>
        </dependency>
        <dependency>
            <groupId>org.exoplatform.ide</groupId>
            <artifactId>exo-ide-extension-logreader</artifactId>
            <version>${org.exoplatform.ide.version}</version>
        </dependency>

        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ide-client</artifactId>
            <version>${project.version}</version>
        </dependency>

        <!-- Extensions -->
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ext-java</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ext-css</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ext-git</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ext-maven</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.codenvy.ide</groupId>
            <artifactId>codenvy-ext-ssh</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.jgit</groupId>
            <artifactId>org.eclipse.jgit.http.server</artifactId>
            <version>${jgit.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <scope>compile</scope>
            <version>${commons-io.version}</version>
        </dependency>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <scope>compile</scope>
            <version>${reflections.version}</version>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <resources>
            <resource>
                <directory>src/main/java</directory>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <!-- Source Generator invocation -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.2.1</version>
                <executions>
                    <execution>
                        <id>extManager-client</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>com.codenvy.util.ExtensionManagerGenerator</mainClass>
                            <arguments>
                                <argument>--rootDir=${generated.sources.directory}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>IDEInjector-client</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>com.codenvy.util.IDEInjectorGenerator</mainClass>
                            <arguments>
                                <argument>--rootDir=${generated.sources.directory}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>DtoRegistry-client</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <mainClass>com.codenvy.util.DtoFactoryVisitorRegistryGenerator</mainClass>
                            <arguments>
                                <argument>--rootDir=${generated.sources.directory}</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.4.3</version>
                <configuration>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>gwt-maven-plugin</artifactId>
                <version>${gwt.maven.plugin.version}</version>
                <executions>
                    <execution>
                        <configuration>
                            <extraJvmArgs>-Xss512m -Xmx2048m -XX:MaxPermSize=1024m</extraJvmArgs>
                        </configuration>
                        <goals>
                            <goal>compile</goal>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <module>com.codenvy.ide.IDEPlatform</module>
                    <logLevel>INFO</logLevel>
                    <extraJvmArgs>-Xss512m -Xmx2048m -XX:MaxPermSize=1024m</extraJvmArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.1.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <excludes>
                        <exclude>**/ExtensionManager.java</exclude>
                        <exclude>**/IDEInjector.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>1.8</version>
                <executions>
                    <execution>
                        <id>add-source</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${generated.sources.directory}</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <!--
    This profile is required for launching Codenvy extensions in 'codenvy-ext-extensions-runtime' module.
    See com.codenvy.ide.ext.extruntime.server.codeserver.GWTMavenCodeServer.fixMGWT332Bug() method.
    It's a recommended (https://groups.google.com/d/msg/codehaus-mojo-gwt-maven-plugin-users/zvJ0IlGN7Fw/RbyteSEKXtoJ)
    workaround of a known bug of Maven GWT Plugin (https://jira.codehaus.org/browse/MGWT-332).
    -->
    <profiles>
        <profile>
            <id>customExtensionSources</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build-helper-maven-plugin</artifactId>
                        <version>1.8</version>
                        <executions>
                            <execution>
                                <id>add-extension-sources</id>
                                <phase>generate-sources</phase>
                                <goals>
                                    <goal>add-source</goal>
                                </goals>
                                <!-- configuration section should be added by
                                com.codenvy.ide.ext.extruntime.server.codeserver.GWTMavenCodeServer.fixMGWT332Bug() method -->
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
